--- a/jupyter/extract_feature_from_graph.ipynb
+++ b/jupyter/extract_feature_from_graph.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -16,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -39,7 +43,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def normalize(values):\n",
@@ -51,23 +57,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7673912\n",
-      "{u'date': u'2019-02-07 22:30:57', u'odds': [{u'winB': 1.92, u'draw': 4.5, u'winA': 3.18, u'time': u'2019-02-06 17:30:56'}, {u'winB': 1.82, u'draw': 4.55, u'winA': 3.46, u'time': u'2019-02-06 18:30:56'}, {u'winB': 1.82, u'draw': 4.55, u'winA': 3.46, u'time': u'2019-02-06 19:30:57'}, {u'winB': 1.83, u'draw': 4.55, u'winA': 3.42, u'time': u'2019-02-06 20:30:56'}, {u'winB': 1.83, u'draw': 4.55, u'winA': 3.42, u'time': u'2019-02-06 21:30:56'}, {u'winB': 1.85, u'draw': 4.5, u'winA': 3.38, u'time': u'2019-02-06 22:30:57'}, {u'winB': 1.86, u'draw': 4.55, u'winA': 3.32, u'time': u'2019-02-06 23:30:57'}, {u'winB': 1.86, u'draw': 4.55, u'winA': 3.32, u'time': u'2019-02-07 00:30:56'}, {u'winB': 1.86, u'draw': 4.55, u'winA': 3.32, u'time': u'2019-02-07 01:30:56'}, {u'winB': 1.85, u'draw': 4.5, u'winA': 3.38, u'time': u'2019-02-07 02:30:57'}, {u'winB': 1.85, u'draw': 4.5, u'winA': 3.38, u'time': u'2019-02-07 03:30:57'}, {u'winB': 1.833, u'draw': 4.55, u'winA': 3.42, u'time': u'2019-02-07 04:30:56'}, {u'winB': 1.833, u'draw': 4.55, u'winA': 3.42, u'time': u'2019-02-07 05:30:56'}, {u'winB': 1.833, u'draw': 4.55, u'winA': 3.42, u'time': u'2019-02-07 06:30:57'}, {u'winB': 1.833, u'draw': 4.55, u'winA': 3.42, u'time': u'2019-02-07 07:30:57'}, {u'winB': 1.833, u'draw': 4.55, u'winA': 3.42, u'time': u'2019-02-07 08:30:57'}, {u'winB': 1.833, u'draw': 4.55, u'winA': 3.42, u'time': u'2019-02-07 09:30:57'}, {u'winB': 1.833, u'draw': 4.55, u'winA': 3.42, u'time': u'2019-02-07 10:30:57'}, {u'winB': 1.81, u'draw': 4.55, u'winA': 3.5, u'time': u'2019-02-07 11:30:57'}, {u'winB': 1.81, u'draw': 4.55, u'winA': 3.5, u'time': u'2019-02-07 12:30:57'}, {u'winB': 1.81, u'draw': 4.55, u'winA': 3.5, u'time': u'2019-02-07 13:30:57'}, {u'winB': 1.81, u'draw': 4.55, u'winA': 3.5, u'time': u'2019-02-07 14:30:57'}, {u'winB': 1.81, u'draw': 4.55, u'winA': 3.5, u'time': u'2019-02-07 15:30:57'}, {u'winB': 1.81, u'draw': 4.55, u'winA': 3.5, u'time': u'2019-02-07 16:30:57'}, {u'winB': 1.73, u'draw': 4.65, u'winA': 3.78, u'time': u'2019-02-07 17:30:58'}, {u'winB': 1.74, u'draw': 4.65, u'winA': 3.72, u'time': u'2019-02-07 18:30:57'}, {u'winB': 1.71, u'draw': 4.75, u'winA': 3.8, u'time': u'2019-02-07 19:30:57'}, {u'winB': 1.73, u'draw': 4.65, u'winA': 3.78, u'time': u'2019-02-07 20:30:57'}, {u'winB': 1.727, u'draw': 4.75, u'winA': 3.72, u'time': u'2019-02-07 21:30:58'}, {u'winB': 1.72, u'draw': 4.75, u'winA': 3.76, u'time': u'2019-02-07 22:30:57'}], u'id': u'7673912', u'teamB': u'\\u0420\\u043e\\u0441\\u0441\\u0438\\u044f', u'teamA': u'\\u0424\\u0438\\u043d\\u043b\\u044f\\u043d\\u0434\\u0438\\u044f'}\n",
-      "0\n"
+      "450\n"
      ]
     }
    ],
    "source": [
     "END_NOT_TAKEN = 2\n",
     "MIN_GAMES_COUNT = 30\n",
-    "history_dict = load_history_dict('/home/workedbee/projects/pythia/data/marathon_khl.json')\n",
+    "history_dict = load_history_dict('../data/khl_odds_2018.json')\n",
     "\n",
     "game_id_to_graph = dict()\n",
     "for key, value in history_dict.items():\n",
@@ -88,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "game_id_to_graph = dict()\n",
@@ -113,7 +121,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1347,7 +1357,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Y_new_gen = [\n",
@@ -1367,7 +1379,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1392,7 +1406,9 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1428,7 +1444,9 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1492,7 +1510,9 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1541,7 +1561,9 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1559,7 +1581,9 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1928,7 +1952,9 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1963,7 +1989,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "NameError",
@@ -1995,7 +2023,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "NameError",
@@ -2027,7 +2057,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2158,7 +2190,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2187,7 +2221,9 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2988,7 +3024,9 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Y_simple = [\n",
@@ -3051,7 +3089,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
