Remove graph endings with the same value to improve graph analysis.

--- a/jupyter/learn_plot_and_measure.ipynb
+++ b/jupyter/learn_plot_and_measure.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -17,9 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
@@ -32,44 +28,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "338\n",
-      "7\n",
       "338\n",
       "85\n",
+      "7\n",
       "Правильность на обучающем наборе: 0.727\n",
-      "Правильность на тестовом наборе: 0.612\n",
-      "+ 1.24: [ 0.37566676  0.62433324] 0.24\n",
-      "- 1.29: [ 0.35232914  0.64767086] -0.76\n",
-      "- 5.5: [ 0.47486772  0.52513228] -1.76\n",
-      "- 1.46: [ 0.35232914  0.64767086] -2.76\n",
-      "+ 1.27: [ 0.29409884  0.70590116] -2.49\n",
-      "- 1.5: [ 0.35904732  0.64095268] -3.49\n",
-      "- 1.19: [ 0.331799  0.668201] -4.49\n",
-      "+ 1.55: [ 0.44914295  0.55085705] -3.94\n",
-      "+ 1.54: [ 0.44914295  0.55085705] -3.4\n",
-      "- 1.38: [ 0.44365349  0.55634651] -4.4\n",
-      "+ 1.52: [ 0.42516381  0.57483619] -3.88\n",
-      "+ 1.39: [ 0.44914295  0.55085705] -3.49\n",
-      "+ 1.49: [ 0.49226832  0.50773168] -3.0\n",
-      "+ 1.615: [ 0.4197441  0.5802559] -2.385\n",
-      "+ 1.52: [ 0.39864748  0.60135252] -1.865\n",
-      "+ 1.2: [ 0.29409884  0.70590116] -1.665\n",
-      "+ 1.24: [ 0.35650489  0.64349511] -1.425\n",
-      "+ 1.64: [ 0.38694956  0.61305044] -0.785\n",
-      "- 1.196: [ 0.42612676  0.57387324] -1.785\n",
-      "+ 1.41: [ 0.49782106  0.50217894] -1.375\n",
-      "+---+--++-++++++++-+\n",
-      "1.24 1.29 5.5 1.46 1.27 1.5 1.19 1.55 1.54 1.38 1.52 1.39 1.49 1.615 1.52 1.2 1.24 1.64 1.196 1.41 \n",
-      "Games: 20, Total: -1.375, -0.06875 per game\n"
+      "Правильность на тестовом наборе: 0.624\n",
+      "+ 1.63: [0.42934899 0.57065101] 0.63\n",
+      "+ 1.727: [0.42617141 0.57382859] 1.357\n",
+      "+ 1.52: [0.3846068 0.6153932] 1.877\n",
+      "+ 1.62: [0.42934899 0.57065101] 2.497\n",
+      "+ 1.139: [0.37708522 0.62291478] 2.636\n",
+      "+ 1.59: [0.40784406 0.59215594] 3.226\n",
+      "+ 1.43: [0.36318796 0.63681204] 3.656\n",
+      "- 1.444: [0.34768519 0.65231481] 2.656\n",
+      "- 1.38: [0.4229203 0.5770797] 1.656\n",
+      "- 1.46: [0.3527483 0.6472517] 0.656\n",
+      "- 1.45: [0.37708522 0.62291478] -0.344\n",
+      "+ 1.57: [0.40784406 0.59215594] 0.226\n",
+      "- 1.29: [0.3527483 0.6472517] -0.774\n",
+      "- 1.19: [0.37708522 0.62291478] -1.774\n",
+      "+ 1.55: [0.42466091 0.57533909] -1.224\n",
+      "+ 1.61: [0.42783563 0.57216437] -0.614\n",
+      "- 1.54: [0.37393055 0.62606945] -1.614\n",
+      "+ 1.24: [0.40446479 0.59553521] -1.374\n",
+      "+++++++----+--++-+\n",
+      "1.63 1.727 1.52 1.62 1.139 1.59 1.43 1.444 1.38 1.46 1.45 1.57 1.29 1.19 1.55 1.61 1.54 1.24 \n",
+      "Games: 18, Total: -1.374, -0.0763333333333 per game\n"
      ]
     }
    ],
@@ -83,11 +75,11 @@
     "Y_data = data['results'] \n",
     "\n",
     "print len(X_data)\n",
-    "print len(X_data[0])\n",
     "print len(Y_data)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_data, Y_data, random_state=1)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_data, Y_data, random_state=0)\n",
     "print len(y_test)\n",
+    "print len(X_data[0])\n",
     "\n",
     "#classifier = RandomForestClassifier(n_estimators=10, random_state=0)\n",
     "classifier = GradientBoostingClassifier(learning_rate=0.01, random_state=0)\n",
@@ -146,9 +138,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
